restructured styling on profile page and login page just text alignment and fixed button

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -10,10 +10,13 @@ h1{
 }
 
 h2{
-font-size: 2.5rem;
+font-size: 3.0rem;
 margin: 0;
     padding: 0;
     color: #f4d5a9;
+}
+h3 {
+    text-align: center;
 }
 h4{
     color: #f4d5a9; 
@@ -43,6 +46,7 @@ h5, h6{
     border-radius: 8px;
     display: flex;
    flex-direction: column;
+   align-items: center;
 }
 
 .loginCard{
@@ -60,6 +64,13 @@ h5, h6{
     margin-top: 30px;
    
    
+}
+.wishlist {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .profileCard{
@@ -90,6 +101,7 @@ h5, h6{
 }
 
 .itemForm{
+    text-align: center;
     color:#f3e9da;
     font-size: 1.75rem;
 }
@@ -105,11 +117,14 @@ h5, h6{
     max-height: 200px;
 }
 
-
+/* .form-group {
+    display: flex;
+    justify-content: center;
+} */
 
 .form-input,
 .card-description {
-    color: #f3e9da;
+    color: #000000;
     font-style: italic;
     cursor: text;
     text-align: start;
@@ -161,12 +176,16 @@ h5, h6{
 
 label {
     cursor: pointer;
-    color: #faf0e3;
+    color: #000000;
     display: block;
     padding: 10px;
     margin: 3px;
+    text-align: center;
+    font-size: 40px;
 }
-
+.renderedChosenName {
+    text-align: center;
+}
 /* .card4 {
     background-color: #c64c4c;
     border-radius: 8px;
@@ -248,6 +267,11 @@ ul li:before {
     content: '\f06b';
     margin:0 5px 0 -25px;
     color: #e35d5d;
+}
+h5 {
+    font-size: 35px;
+    font-family:  'Rouge Script', cursive;
+    text-align: center;
 }
 
 
